fixed button screenflow on smaller screen

--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,18 @@ border-bottom-left-radius: 0.5rem;}
 .left h1{
     text-align: left;
 }
+
+@media(max-width:600px){
+    .container a{
+        display: block;
+        margin:0.7rem;
+    }
+    .link {
+        max-width: 150px;
+        max-height: 60px;
+    }
+ .link-secondary{
+        padding: 0.3rem;
+        text-align: center;
+    }
+}                                                                                                                                                                                                                                                                                                                                                                                                         
